Revised some spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,6 @@ a {
 
 .menu--open {
   max-height: 100vh;
-  overflow: hidden;
 }
 
 .btn__menu--close {
@@ -1059,6 +1058,11 @@ a {
 @media (max-width: 1024px) {
   h1 {
     font-size: 30px;
+    text-align: center;
+  }
+
+  .landing__left--para {
+    text-align: center;
   }
 
   .nav__link--list {
@@ -1102,12 +1106,8 @@ a {
     font-size: 16px;
   }
 
-  .features--para {
+  .pricing--para {
     padding: 0 16px;
-  }
-
-  .features--description {
-    text-align: center;
   }
 
   .values__left__perks--container {
@@ -1158,6 +1158,10 @@ a {
   }
 
   .service {width: 60%;}
+
+  .features--description {
+    text-align: center;
+  }
 
   .quality-work--container,
   .values--container {
